Fix bug with displaying page on smaller screens

--- a/frontend/src/app/modules/new-meeting/new-meeting/new-meeting.component.sass
+++ b/frontend/src/app/modules/new-meeting/new-meeting/new-meeting.component.sass
@@ -3,7 +3,7 @@
 
 .container
     display: flex
-    height: 100%
+    min-height: 100%
     flex-direction: column
     justify-items: center
     background-color: $athens-gray
